
Version 3.3.3 - xx yyy 2018
Generic changes/fixes
	* fix 19200 Baud protocol live data, skip Rx query while other sensors detected, Rx data in sensor data contained
	* fix recursion synchronizing compare set while adding curve to compare set
	* handle device base directory by interface method, default implementation, device specific implementation if required
Device specific changes/fixes
	* HoTTAdapter* add file selection hint for *.bin;*.log 
	* S32 - fix factor to correct external temperatures
	* S32_2 - initial release for S32 as version 2 displaying all measurement values on a single time line
	* S32 - fix measurement synchronization references (need device XML replacement)
	* S32 - fix external temperature factor according customer feedback

Version 3.3.2 - 15 Apr 2018
* fix illegal formatting option in ParameterControl used for Graupner UDP charger
* fix HoTTAdapter wrong data block number detection
* fix empty template file name if user cancels loading a template
* fix some issues when adding / editing object keys
* fix wrong interpretation and display of geo-coordinates received as degree with decimal digits
* fix parsing error with values coming with comma as separator to decimal places
* fix setting of time grid building new template
* fix circular UI update calls
* fix/tolerate Jeti new alarm protocol 
* context menu texts (graphics / data table tabs)
* add initial support for Junsi iCharger 106B
* add initial support for ELV WDE (Wetter-Daten-Empfänger)
* add initial support for a generic CSV import (using Tesla Battery sample CSV file as source)
* add initial support for Graupner GeniusWizard log files
* update MDLViewer plug-in to 9.3
* copyright update

History analysis
	* New summary chart in the history graphics window
	* Enhance graphics template support
	 	>> new default templates per object key
	 	>> new histo templates format: pls load, check and re-save user histo templates!
	 	>> show a non-default template name in the status bar